--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     <!-- og -->
     <meta property="og:title" content="Spritesheet Viewer" />
     <meta property="og:type" content="website" />
+    <meta property="og:description" content="A tool to view spritesheet animations and export to GIF">
 
     <title>Spritesheet Viewer</title>
-    <meta name="description" content="A tool to view spritesheet animations and export to GIF">
   </head>
   <body>
     <noscript>
